methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:2: error: ':' expected but ')' found.
def hunt(x) {avance();var x=getCouleurSol();recule();hunt()
          ^SlugSnail:16: error: identifier expected but '}' found.
}
^